Exercicio 002 Media Query

--- a/exercícios/ex026/mq002/estilos/retrato.css
+++ b/exercícios/ex026/mq002/estilos/retrato.css
@@ -3,5 +3,6 @@
 /* Configurações em pé(portrait) */
 
 body{
-    background-color: darkgreen;
+    background-image: url('../imagens/cev-portrait.jpg');
+    background-position: center bottom;
 }
