--- a/exercícios/ex026/mq002/estilos/paisagem.css
+++ b/exercícios/ex026/mq002/estilos/paisagem.css
@@ -3,5 +3,6 @@
 /* Configurações deitado(landscape) */
 
 body{
-    background-color: red;
+    background-image: url('../imagens/cev-landscape.jpg');
+    background-position: left bottom;
 }
